# ROS

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lab_2/lib/lab_2/: client  service
install/lab_2/share/lab_2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/own_interfaces/include/own_interfaces/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  vel.h  vel.hpp
install/own_interfaces/include/own_interfaces/srv/: rp_mvel.hpp
install/own_interfaces/share/own_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/own_interfaces/share/own_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+9 more)
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/lab_1/: package.xml  setup.py
src/lab_1/install/: local_setup.sh  setup.sh
src/lab_1/install/lab_1/lib/lab_1/: node
src/lab_1/install/lab_1/share/lab_1/: package.dsv  package.ps1  package.sh
src/lab_1/lab_1/: Subscriptor.py  publicador.py
src/lab_1/log/: latest_build
src/lab_2/: package.xml  setup.py
src/lab_2/lab_2/: RPM_Interface.srv  cliente.py  servicio.py
src/lab_2/lab_2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lab_2/lab_2/log/: latest_build
src/log/: latest_build
src/own_interfaces/: CMakeLists.txt
src/own_interfaces/srv/: RPMvel.srv
(+15 files in other folders)
