<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematy>

<package format="3">
  <name>lab_1</name>
    <version>0.0.0</version>
    <description>LAB1: Publicador y subscriptor RPM</description>
    <maintainer email="ovidioandraaz@unimagdalena.edu.co">Grupo 2</maintainer>
    <license>Apache License 2.0</license>
  
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
      <build_type>ament_python</build_type>
    </export>

</package>
